CAN-1151: Mediathread accessibility: Ensure active user interface components have sufficient contrast

--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -4391,5 +4391,5 @@ ul.selection-spinner {
 }
 
 .form-control::placeholder {
-  color: #6B7780;
+  color: #495057;
 }
